# beamsim2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: BEAMSIMII_First_Research.md  BEAMSIMII_Gameplan.md  BEAMSIMII_Project_Overview.md  CODING_STANDARDS.md  Chunk2_Results_Viz_Design.md  Chunk3a_Findings.md  Chunk3b_Findings.md  Chunk3c_Findings.md  Chunk3d_Findings.md  Chunk3e_Findings.md  Chunk4_Findings.md  Chunk5_Gameplan.md  Chunk5_Log.md  Chunk5_Status.md  Chunk5a_Findings.md  Chunk5b_Findings.md  Chunk5b_Kickoff_Prompt.md  Chunk5c_Findings.md  Chunk5c_Kickoff_Prompt.md  DATA_CONTRACT.md  Phase 2 - Filter Solver.md  Research Phase 2.md  SETUP_NOTES.md
tests/: test_analytic_piston.py  test_beamform_auto_design.py  test_beamform_cardioid_band.py  test_beamform_cbt_band.py  test_beamform_constant_di.py  test_beamform_convention.py  test_beamform_engine.py  test_beamform_multi_target.py  test_beamform_wng_scale.py  test_bempp_validation.py  test_cea2034.py  test_closed_loop.py  test_contract_phase2.py  test_core_foundation.py  test_driver_terminal.py  test_faces.py  test_field_referencing.py  test_filter_export.py  test_frd_export.py  test_geometry_health.py  test_gui_project_roundtrip.py  test_gui_smoke.py  test_hdf5_atomic.py  test_hdf5_roundtrip.py  test_logging_prefs.py  test_ncinp_writer.py  test_numcalc_config.py  test_numcalc_roundtrip.py  test_phase_origin.py  test_pipeline_e2e.py  test_pipeline_run.py  test_power_di.py  test_progress.py  test_project_io.py  test_scheduler.py  test_settings_merge.py  test_sh_transform.py  (+6 more)
(+78 files in other folders)
